LOON-414: Leaderboard API (#38)
* LOON-414: Leaderboard API

* LOON-414: Leaderboard API

* Update backend/src/main/kotlin/cz/loono/backend/api/controller/LeaderboardController.kt


* LOON-414: Leaderboard API
